<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPlatinum"
              android:orientation="horizontal">

    <ImageView
        android:id="@+id/card_image_view"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/add"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/source_word"
            android:textColor="@color/colorBeautifulPurple"/>

        <EditText
            android:id="@+id/source_word_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorBeautifulPurple"
            android:textSize="18sp"
            tools:text="@tools:sample/lorem/random"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/translated_word"
            android:textColor="@color/colorBeautifulPurple"/>


        <EditText
            android:id="@+id/translated_word_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorBeautifulPurple"
            android:textSize="18sp"
            tools:text="@tools:sample/lorem"/>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="8dp"
            android:background="@drawable/button_ok"
            android:text="@string/ok"
            android:textSize="18sp"/>

    </LinearLayout>


</LinearLayout>