<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/bg_mount">

    <ImageView
        android:id="@+id/user_picture_image_view"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/monkey"/>

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_picture_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:lines="1"
        android:maxLines="2"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:text="@tools:sample/lorem/random"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_connections_text_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/frame"
                android:gravity="center"
                android:lines="1"
                android:maxLines="1"
                android:textSize="24sp"
                tools:text="8888"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/total_connections"
                android:textSize="16sp"/>

        </LinearLayout>


        <Space
            android:layout_width="24dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_words_text_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/frame"
                android:gravity="center"
                android:lines="1"
                android:maxLines="1"
                android:textSize="24sp"
                tools:text="8888"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/total_words"
                android:textSize="16sp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:background="@drawable/button_logout_bg"
        android:text="@string/log_out_button_text"
        android:textSize="16sp"/>

</RelativeLayout>